Make the forms more readable

--- a/app/views/sensors/_form.html.erb
+++ b/app/views/sensors/_form.html.erb
@@ -20,7 +20,8 @@
     <%= f.number_field :value %>
   </div>
   <div class="field">
-    <%= f.label :is_active %><br>
+    <!--<%= f.label :is_active %><br>-->
+    Active
     <%= f.check_box :is_active %>
   </div>
   <div class="actions">
