--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -1,9 +1,9 @@
-body { background-color: #fff; color: #333; }
+body { background-color: #eee; color: #333; }
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size:   13px;
-  line-height: 18px;
+  font-size:   20px;
+  line-height: 30px;
 }
 
 pre {
@@ -12,12 +12,15 @@ pre {
   font-size: 11px;
 }
 
-a { color: #000; }
-a:visited { color: #666; }
+h1 {
+  text-size: 22px;
+}
+a { color: #aaa; }
+a:visited { color: #aaa; }
 a:hover { color: #fff; background-color:#000; }
 
 div.field, div.actions {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 #notice {
@@ -28,6 +31,10 @@ div.field, div.actions {
   padding: 2px;
   background-color: red;
   display: table;
+}
+
+input {
+  font-size: 20px;
 }
 
 #error_explanation {
